# immute

./: .gitignore  LICENSE  README.md  immute.py  pyproject.toml
tests/: immutable_test.py
