[tool.poetry]
name = "immute"
version = "0.3.3"
description = "Create immutable python classes"
authors = ["fitzypop <fitzypop@pm.me>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/fitzypop/immute"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
pytest-sugar = "^0.9.4"
black = "^22.3.0"
flake8 = "^4.0.1"
coverage = "^6.3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
